Sun Aug 29 22:37:00 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: post release bump.

Sun Aug 29 21:55:09 2004  Jonathan Blandford  <jrb@gnome.org>

	* NEWS: Release 2.7.1

2004-07-23  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=148291
	* configure.in : typo

2004-06-07  Jody Goldberg <jody@gnome.org>

	* po/POTFILES.in : add server file, still unused without the patch
	* configure.in : ditto.

2004-06-01  Jody Goldberg <jody@gnome.org>

	* schemas/desktop_gnome_peripherals_keyboard_xkb.schemas.in : Add
	  xkb/update_handlers.

2004-08-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added «nb» to ALL_LINGUAS.
2004-08-16  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "bs" to ALL_LINGUAS.

Sat Jul 31 11:00:33 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: post release bump

Fri Jul 30 20:39:10 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: 2.7.0

Wed Jul 21 15:43:55 2004  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: Blah.  badly applied patch.

Wed Jul 21 15:09:17 2004  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: patch from Mason Kidd <mrkidd@mrkidd.com> to put
	back default-applications and remove file-types.

Mon Jul 19 11:09:44 2004  Jonathan Blandford  <jrb@gnome.org>

	* capplets/Makefile.am (always_built_SUBDIRS): 
	* configure.in: remove default-applications capplet.

2004-07-15  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fix OSS detection on NetBSD, patch from Julio M.
	Merino Vidal <jmmv@menta.net> (Closes: #145038)

2004-07-15  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fix gdk-pixbuf-csource's double identity (was not
	detecting gdk-pixbuf-csource-32 from gtk2-devel), detect and
	substitute glib-genmarshal's binary

2004-05-17  Sergey V. Udaltsov <svu@gnome.org>

	* Merged the preview tab branch. The module libkbdraw appended

2004-05-17  Jody Goldberg <jody@gnome.org>
